uf_ulog_macro/tests/ui/fail_unsupported_type.stderr
error: unsupported field type
 --> tests/ui/fail_unsupported_type.rs:4:13
  |
4 |     values: Vec<u8>,
  |             ^^^^^^^
