uf_ulog_macro/tests/ui/fail_unsupported_type.rs
#[derive(uf_ulog_macro::ULogData)]
struct UnsupportedType {
    timestamp: u64,
    values: Vec<u8>,
}

fn main() {}
